fix: update vehicle card background color for improved aesthetics and readability

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -11,7 +11,7 @@
     width: 350px;
     max-height: 80vh;
     overflow-y: auto;
-    background: #ccc;
+    background: #f3f3f0;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 10px;
@@ -37,8 +37,13 @@
     font-weight: bold;
     color: #333;
   }
+  
   .vehicle-info {
     font-size: 14px;
+    color: #000000d0;
+  }
+
+  .vehicle-info strong{
     color: #000000d0;
   }
 
